Removed theme as NPM package in favor of CDN link (#138)

--- a/01-Login/public/index.html
+++ b/01-Login/public/index.html
@@ -30,6 +30,11 @@
       crossorigin="anonymous"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.auth0.com/js/auth0-samples-theme/1.0/css/auth0-theme.min.css"
+    />
+
     <title>Login</title>
   </head>
   <body class="h-100">
